ThinBlueLie/wwwroot/css/site.css
@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
:root {
    --low: #007bff;
    --low-medium: #00F6FF;
    --medium: #ffc107;
    --high-medium: #fd7e14;
    --high: #dc3545;
    --extreme: #DB3691;
}

html, body {
   /* font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
}

a, .btn-link {
    color: #0366d6;
}

.btn-primary {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

.row.fix {
    margin: auto !important;
}

.nogap {
    margin: 0px;
    padding: 0px;
}

.context.indent p {
    text-indent: 1.5rem;
}

.center {
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.imaginary-line, .imaginary-item {
    background-color: #e8e8e8;
}

del, .deleted-li, .deleted-item {
    text-decoration: line-through;
    background-color: #fbb;
   /* color: #555;*/
}

ins, .inserted-li, .inserted-item {
    text-decoration: none;
    background-color: #d4fcbc;
}
.information span {
    display: block;
}
@media (min-width: 25em) {

    /* html, body {
        overflow-x: hidden;
    }*/

    body {
        position: relative;
    }
}

.navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
}

hr.blueline {
    border: none;
    height: 3px;
    /* Set the hr color */
    color: #314DB2; /* old IE */
    background-color: #314DB2; /* Modern Browsers */
}
/* nav menu with blue bar */
.nav-with-bar h5 {
    text-decoration: underline;
}

.nav-with-bar .nav-link:hover {
    text-decoration: underline;
}

.nav-with-bar .nav-link.active {
    border-right: 3px solid blue;
}

.nav-with-bar a {
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 0px;
}
.nav-with-bar ul {
    list-style-type: none;
    padding-left: 10px;
}
    .nav-with-bar a:hover {
        color: #064579;
    }

/*Index page */
.body {
    padding: 70px;
    margin: 0px;
}

.header-image {
    background-size: cover !important;
    background-color: #919191;
    width: 100%;
    background-position: 50% 38%;
    border-radius: 0px !important;
    padding-top: 7rem !important;
    padding-bottom: 6rem !important;
    margin-bottom: 0px;
    margin-top: 0px !important;
}

@media (max-width: 480px) {
    .header-image {
        padding-bottom: 70px;
    }
}




/*Navbar */
a.navbar-brand {
    white-space: normal;
    text-align: center;
    word-break: break-all;
    background-size: contain;
}

.navbar-brand span {
    vertical-align: middle;
    padding: 0 0 0 15px;
}

/* changing color and underline on hover */
.navbar-nav .nav-item.active .nav-link,
.navbar-nav .nav-item:hover .nav-link {
    text-decoration: underline !important;
}


.nav-item .btn-dark.dropdown-toggle:hover, .nav-item .btn-dark.dropdown-toggle:focus,
.nav-item .btn-dark.dropdown-toggle, .nav-item .btn.nav-link:active,
.nav-item .btn.nav-link:focus, .nav-item .btn.nav-link {
    box-shadow: none !important;
    border: none !important;
    transition: none !important;
    -webkit-transition: none !important;
}
    .nav-item .btn-dark.dropdown-toggle:hover, .nav-item .btn-dark.dropdown-toggle:active,
    .nav-item .btn-dark.dropdown-toggle {
        background-color: inherit;
    }
.nav-item .nav-link.onpage + .btn.dropdown-toggle {
    text-decoration: none !important;
    background-color: #2B3035 !important;
    border-radius: 3px !important;
}

/* depressing navbar link based on what page user is on */
.onpage {
    text-decoration: none;
    background-color: #2B3035 !important;
    border-radius: 3px;
}



/* Fuck 12 */
.fuck12.jumbotron {
    background-color: transparent !important;
    color: white;
}
/* Timeline Layout */
.week {
    background-color: #dedede;
    border: 0px;
    border-left: 1px solid black;
    border-right: 1px solid black;
    border-radius: 0px;
    padding-top: 1px;
    height: 31px;
    cursor: pointer !important;
    padding-left: 4px;
    padding-right: 4px;
}

#imposedline {
    border-top: 1px solid black;
    color: #dee2e6;
    position: absolute;
    z-index: 10;
    top: 38px;
    left: 10%;
}

.week.active.severity-no-event {
    background-color: #919191;
}

.event {
    color: black;
    padding: 3px 5px 0px 0px;
    margin: 3px 0px;
}

.severity-low {
    background-color: var(--low);
    outline-color: var(--low) !important;
    color: white !important;
}

.severity-low-medium {
    background-color: var(--low-medium);
    outline-color: var(--low-medium) !important;
    color: black !important;
}

.severity-medium {
    background-color: var(--medium);
    outline-color: var(--medium) !important;
    color: black !important;
}

.severity-high-medium {
    background-color: var(--high-medium);
    outline-color: var(--high-medium) !important;
    color: black !important;
}

.severity-high {
    background-color: var(--high);
    outline-color: var(--high) !important;
    color: white !important;
}

.severity-extreme {
    background-color: var(--extreme);
    outline-color: var(--extreme) !important;
    color: white !important;
}

.severity-no-event {
    background-color: #DEDEDE;
    outline-color: #919191 !important;
}

.btn.week.active{
    box-shadow: none;
    outline-width: 3px;
    outline-style: solid;
    outline-offset: unset;
}

.timeline-label {
    position: absolute !important;
    /*top: -25px !important;*/
    text-align: center;
    padding: 0px;
    margin: 0px;
    left: 0px;
    width: 100%;
    white-space: nowrap;
}

.btn {
    cursor: pointer;
}

#triangle-left {
    width: 0;
    height: 0;
    border-top: 15px solid transparent;
    border-right: 30px solid black;
    border-bottom: 16px solid transparent;
    margin-right: 0.4rem;
    position: relative;
    cursor: pointer;
}
/* ... */

